fix: add z-index to sub header

--- a/components/headers/style.css
+++ b/components/headers/style.css
@@ -22,6 +22,7 @@ body {
 
 .header2__sub-header {
     position: absolute;
+    z-index: -1;
     opacity: 0.06;
     font-size: 111px;
     left: 50%;
