--- a/sections/documents/style.css
+++ b/sections/documents/style.css
@@ -36,6 +36,7 @@ body {
 
 .documents__sub-header {
     position: absolute;
+    z-index: -1;
     opacity: 0.06;
     font-size: 111px;
     left: 50%;
